@startuml Phase1_ClassDiagram

skinparam classAttributeIconSize 0
skinparam linetype ortho

title Phase 1: Logging System - Class Diagram

enum Severity {
    DEBUG
    INFO
    WARNING
    ERROR
    CRITICAL
}

class LogMessage {
    - appName: std::string
    - context: std::string
    - timeStamp: std::string
    - severity: Severity
    - text: std::string
    --
    + LogMessage(appName, context, severity, text)
    + getAppName(): std::string
    + getContext(): std::string
    + getTimeStamp(): std::string
    + getSeverity(): Severity
    + getText(): std::string
    --
    + {static} operator<<(os, logMessage): std::ostream&
}

interface ILogSink <<interface>> {
    + {abstract} write(message: LogMessage): void
    + {abstract} ~ILogSink()
}

class ConsoleSinkImpl {
    + write(message: LogMessage): void
   
}

class FileSinkImpl {
    - filePath: std::string
    - fileStream: std::ofstream
    --
    + FileSinkImpl(filePath: std::string)
    + write(message: LogMessage): void
    
}

class LogManager {
    - sinks: std::vector<std::shared_ptr<ILogSink>>
    - buffer: std::vector<LogMessage>
    --
    + addSink(sink: std::shared_ptr<ILogSink>): void
    + log(message: LogMessage): void
    + flush(): void
}

' Relationships
ILogSink <|.. ConsoleSinkImpl : implements
ILogSink <|.. FileSinkImpl : implements

LogManager o-- "0..*" ILogSink : sinks
LogManager o-- "0..*" LogMessage : buffer

LogMessage --> Severity : uses

note right of ILogSink
    Strategy Pattern:
    Different sink implementations
    provide different output strategies
end note

note bottom of LogManager
    Manages multiple sinks
    and buffers messages
    before flushing
end note

@enduml
